# dialogue2graph

./: .gitignore  CONTRIBUTING.md  README.md  examples.ipynb  house_purchase.json  idea.md  prompts.py  pyproject.toml  report_d2g_ext_2025-04-10_15-16-58.json  report_d2g_light_2025-04-10_15-15-49.json  report_d2g_light_2025-04-11_14-18-32.json  report_d2g_llm_2025-04-10_15-15-20.json  ruff.toml  showcase.py
dev/: .buildinfo  (+11 more)
dev_packages/chatsky_llm_autoconfig/: pyproject.toml
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/: dialogue.py  graph.py  missing_edges_prompt.py  prompts.py  schemas.py  settings.py  utils.py  vectors.py
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/algorithms/: append_chain.py  cycle_graph_generation_pipeline.py  dialogue_generation.py  experimental_sampler.py  three_stages_0.py  three_stages_0i.py  three_stages_1.py  three_stages_1i.py  three_stages_graph_generation.py  three_stages_graph_generation_1dialogue.py  topic_graph_generation.py  two_stages_graph_generation.py
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/autometrics/: run_autometrics.py
dev_packages/chatsky_llm_autoconfig/chatsky_llm_autoconfig/metrics/: automatic_metrics.py  embedder.py  llm_metrics.py  vector.ipynb
experiments/exp20250206_desc/: pyproject.toml
experiments/exp20250206_desc/exp20250206_desc/: __init__.py  some_code.py
experiments/exp20250206_desc/notebooks/: hyp1.ipynb
experiments/exp20250206_desc1/: pyproject.toml
experiments/exp20250206_desc1/exp20250206_desc1/: __init__.py
experiments/exp2025_02_07_example/: README.md  pyproject.toml
experiments/exp2025_02_07_example/exp2025_02_07_example/: your_notebook.ipynb
experiments/exp2025_02_10_fixing_dependencies/: pyproject.toml
experiments/exp2025_02_10_fixing_dependencies/exp2025_02_10_fixing_dependencies/: okay.py  your_notebook.ipynb
experiments/exp2025_02_25_exploring_repo/: README.md  pyproject.toml
experiments/exp2025_02_25_exploring_repo/src/exp2025_02_25_exploring_repo/: dialog generation.ipynb  generation examples.ipynb
experiments/exp2025_02_25_exploring_repo/tests/: test_generation.py
experiments/exp2025_03_04_load_dataset/: pyproject.toml
experiments/exp2025_03_04_load_dataset/exp2025_03_04_load_dataset/: load_datasets.ipynb  load_script.py  settings.py
experiments/exp2025_03_06_real_dialogs2graph_example/: pyproject.toml
experiments/exp2025_03_06_real_dialogs2graph_example/src/exp2025_03_06_real_dialogs2graph_example/: main.ipynb
experiments/exp2025_03_09_push_to_hub/: pyproject.toml
experiments/exp2025_03_10_push_dataset_to_hub/: README.md  pyproject.toml
experiments/exp2025_03_10_push_dataset_to_hub/data/: generated_24.json
experiments/exp2025_03_10_push_dataset_to_hub/exp2025_03_10_push_dataset_to_hub/: push_to_hub.ipynb
experiments/exp2025_03_11_all_uttrs_present/: pyproject.toml
experiments/exp2025_03_11_all_uttrs_present/exp2025_03_11_all_uttrs_present/: tests.ipynb
experiments/exp2025_03_12_topic_generation/: README.md  pyproject.toml
experiments/exp2025_03_12_topic_generation/exp2025_03_12_topic_generation/: book_table.json  embedder.py  prompts.py  settings.py  three_stages_0.py  three_stages_algo.py  three_stages_graph_generation.py  three_stages_llm.py  topic_generation.ipynb  transfer.json
experiments/exp2025_03_18_embedding_grouper/: README.md  pyproject.toml
experiments/exp2025_03_18_embedding_grouper/exp2025_03_18_embedding_grouper/: dialogs.json  embedder.py  embedder_algo.py  grouper.ipynb  prompts.py  settings.py  three_stages_algo.py  three_stages_embedder.py  three_stages_llm.py  utils.py  vectors.py
experiments/exp2025_03_19_testing_dia_augmentation/: README.md  pyproject.toml
experiments/exp2025_03_19_testing_dia_augmentation/data/: gen_dataset_augment_naive_filtered  gen_dataset_augment_one-shot  gen_dataset_augment_one-shot_2
experiments/exp2025_03_19_testing_dia_augmentation/exp2025_03_19_testing_dia_augmentation/: augmentation_prompts.py  augmentation_utils.py  dialog_augmentation.ipynb  dialog_augmentation_check.ipynb  dialogue_augmentation.ipynb  dialogue_augmentation_check.ipynb  find_duplicates.ipynb  prompts.py
experiments/exp2025_03_24_generated_data_analysis/: README.md  pyproject.toml
experiments/exp2025_03_24_graph_incrementation_compare/: pyproject.toml
experiments/exp2025_03_24_graph_incrementation_compare/data/: gen24_graphid0_incrementation.json  gen24_graphid10_incrementation.json  gen24_graphid11_incrementation.json  gen24_graphid12_incrementation.json  gen24_graphid13_incrementation.json  gen24_graphid14_incrementation.json  gen24_graphid15_incrementation.json  gen24_graphid16_incrementation.json  gen24_graphid17_incrementation.json  gen24_graphid18_incrementation.json  gen24_graphid19_incrementation.json  gen24_graphid1_incrementation.json  gen24_graphid20_incrementation.json  gen24_graphid21_incrementation.json  gen24_graphid22_incrementation.json  gen24_graphid23_incrementation.json  gen24_graphid2_incrementation.json  gen24_graphid3_incrementation.json  gen24_graphid4_incrementation.json  gen24_graphid5_incrementation.json  gen24_graphid6_incrementation.json  gen24_graphid7_incrementation.json  gen24_graphid8_incrementation.json  gen24_graphid9_incrementation.json
experiments/exp2025_03_24_graph_incrementation_compare/exp2025_03_17_sample_graph_incrementation/: .gitignore  embedder.py  first_dialog_varyiation.ipynb  fixing_parser.py  graph_incrementation.ipynb  models_comparation_o3_and_4o 2.ipynb  models_comparation_o3_and_4o.ipynb  parser_helpers.py  prompts.py  settings.py  three_stages_0i.py  three_stages_1.py  utils.py
experiments/exp2025_04_03_selecting_emb_params/: README.md  pyproject.toml
experiments/exp2025_04_04_pushing_aug_data_to_hub/: README.md  pyproject.toml
experiments/exp2025_04_04_pushing_aug_data_to_hub/exp2025_04_04_pushing_aug_data_to_hub/: pushing_data_to_hub.ipynb
experiments/exp2025_05_16_testing_autogen/: README.md  pyproject.toml
experiments/exp2025_05_16_testing_autogen/exp2025_05_16_testing_autogen/: autogen_swarm.ipynb
(+1570 files in other folders)
