[tool.poetry]
name = "dialogue2graph"
version = "0.1.0"
description = "Repository with all of the work related to Chatsky LLM-Autoconfig project"
authors = ["askatasuna <andruhabobr@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10,<3.13"
tqdm = "^4.66.5"
poethepoet = "^0.29.0"
pandas = "^2.2.3"
colorama = "^0.4.6"
networkx = "^3.3"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
chatsky = "^0.8.0"
matplotlib = "^3.9.2"
langchain-community = "^0.3.1"
pydantic = "*"
psycopg2-binary = "^2.9.10"
scipy = "^1.15.2"
sentence-transformers = "^3.4.1"
datasets = "*"
click = "^8.1.8"
pyyaml = "^6.0.2"
langchain-chroma = "^0.2.2"
langchain-huggingface = "^0.1.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
nbsphinx = "*"
sphinx-favicon = "*"
sphinx-gallery = "*"
sphinx-copybutton = "*"
sphinxcontrib-katex = "*"
pydata-sphinx-theme = "*"
sphinxcontrib-apidoc = "*"
sphinxcontrib-httpdomain = "*"
sphinx-autodoc-typehints = "*"
jupytext = "*"
jupyter = "*"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "*"
isort = "*"
black = "*"
mypy = "*"


[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "*"

[tool.poe]
default_task_type = "script"

[tool.poe.tasks]
flake = "scripts.codestyle:_run_flake"
black = "scripts.codestyle:_run_black(modify=False)"
format = "scripts.codestyle:_run_black(modify=True)"
test = "scripts.test:_test"
metrics = "scripts.metrics:_run_check"
lint.sequence = ["flake", "black"]

[tool.poetry.scripts]
dialogue2graph = "dialogue2graph.cli.main:cli"
