[tool.poetry]
name = "chatsky_llm_autoconfig"
version = "0.1.0"
description = "This module provides functionality for automatic script creation based on dialogue description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
networkx = "^3.3"
langchain = "^0.3.1"
langchain-openai = "^0.2.1"
chatsky = "^0.8.0"
matplotlib = "^3.9.2"
langchain-community = "^0.3.1"
langchain-huggingface = "^0.1.2"
langchain-chroma = "*"
scipy = "*"
pydantic = "*"
numpy = "<2.0"
torch="2.2.2"
sentence-transformers = "*"
datasets = "*"
spacy = '*'
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"}
scikit-learn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
