[tool.poetry]
name = "exp20250206-desc"
version = "0.1.0"
description = ""
authors = ["Denis Kuznetsov <kuznetsov.den.p@gmail.com>"]
readme = "README.md"
packages = [{include = "exp20250206_desc"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
