[tool.poetry]
name = "exp2025-02-07-example"
version = "0.1.0"
description = ""
authors = ["NotBioWaste905 <andruhabobr@gmail.com>"]
readme = "README.md"
packages = [{include = "exp2025_02_07_example", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
