[tool.poetry]
name = "exp2025-02-10-fixing-dependencies"
version = "0.1.0"
description = ""
authors = ["NotBioWaste905 <andruhabobr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
dialogue2graph = {path = "../.."}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
