[tool.poetry]
name = "exp2025-03-04-load-dataset"
version = "0.1.0"
description = "Load real datasets into single dataset with necessary format for d2g task"
authors = ["Yuri Peshkichev <yuri.peshkichev@gmail.com>"]
readme = "README.md"
packages = [{include = "exp2025_03_04_load_dataset", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"