[project]
name = "exp2025-03-06-real-dialogs2graph-example"
version = "0.1.0"
description = ""
authors = [
    {name = "anna-a-m",email = "anna.micj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "exp2025_03_06_real_dialogs2graph_example", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
