[tool.poetry]
name = "exp2025-03-09-push-to-hub"
version = "0.1.0"
description = ""
authors = ["Yuri Peshkichev <yuri.peshkichev@gmail.com>"]
readme = "README.md"
packages = [{include = "exp2025_03_09_push_to_hub", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
datasets = "*"
dialogue2graph = {path = "../.."}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"