[tool.poetry]
name = "exp2025-03-09-push-to-hub"
version = "0.1.0"
description = "push generated dia2graph dataset to huggingface"
authors = ["Yuri Peshkichev"]
readme = "README.md"
packages = [{include = "exp2025_02_07_example", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.13"
ruff = "^0.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
