[tool.poetry]
name = "exp2025-03-10-push-dataset-to-hub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
dialogue2graph = {path = "../.."}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
