[project]
name = "exp2025-03-24-generated-data-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "anna-a-m",email = "anna.micj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets (>=3.4.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "exp2025_03_24_generated_data_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
