[project]
name = "exp2025-03-24-graph-incrementation-compare"
version = "0.1.0"
description = ""
authors = [
    {name = "BuldakovN",email = "nikitabuldakov@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
