[project]
name = "exp2025-04-03-selecting-emb-params"
version = "0.1.0"
description = ""
authors = [
    {name = "anna-a-m",email = "anna.micj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "exp2025_04_03_selecting_emb_params", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
