[project]
name = "exp2025-04-04-pushing-aug-data-to-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "dariaolshevskaya",email = "olshevskaya.d@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
